fixed tablet/desktop queries

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                             <option value="WY">Wyoming</option>
                         </select>
                         </div>
-                        <div class="side-by-side">
+                        <div class="zip">
                             <label for="zip">Zip Code</label>
                             <input type="text" name="zip" id="zip">
                         </div>
