added README and additional placeholder text

--- a/index.html
+++ b/index.html
@@ -41,21 +41,21 @@
                         </div>
                         <div class="side-by-side">
                             <label for="phone">Phone Number</label>
-                            <input type="tel" name="phone" id="phone">
+                            <input type="tel" name="phone" id="phone" placeholder="Telephone">
                         </div>
                         <div class="side-by-side">
                             <label for="address">Street Address</label>
-                            <input type="text" name="address" id="address">
+                            <input type="text" name="address" id="address" placeholder="Address">
                         </div>
                         <div class="side-by-side">
                             <label for="city">City</label>
-                            <input type="text" name="city" id="city">
+                            <input type="text" name="city" id="city" placeholder="City">
                         </div>
                         <!-- State list adapted from https://www.mediacollege.com/internet/samples/html/state-list.html -->
                         <div class="side-by-side">
                         <label for="state">State</label>
                         <select name="state" size="1" id="state">
-                            <option selected value="" disabled selected>Choose State</option>
+                            <option selected value="" disabled>Choose State</option>
                             <option value="AL">Alabama</option>
                             <option value="AK">Alaska</option>
                             <option value="AZ">Arizona</option>
@@ -110,7 +110,7 @@
                         </div>
                         <div class="zip">
                             <label for="zip">Zip Code</label>
-                            <input type="text" name="zip" id="zip">
+                            <input type="text" name="zip" id="zip" placeholder="Zip code">
                         </div>
                     </fieldset>
                 </div>
